# interpreterJS

./: .gitignore  CMakeLists.txt  README.md  README_TESTS.md
data/: input.txt  output.txt
grammar/: JavaScriptBaseLexer.cpp  JavaScriptBaseLexer.h  JavaScriptBaseParser.cpp  JavaScriptLexer.g4  JavaScriptParser.g4  genGrammar.sh  parserGrammJS.g4
include/catch/: CMakeLists.txt
src/: CMakeLists.txt  ParseManager.cpp  ParseManager.h  Visitor.cpp  Visitor.h  main.cpp
tests/: CMakeLists.txt  test_test.cpp
tests/data/additive/: test1.out  test2.out  test3.out  test_test.cpp
tests/data/array/: test1.out  test2.out  test3.out  test4.in  test4.out  test5.out  test_test.cpp
tests/data/assignment/: test1.out  test10.out  test11.out  test12.out  test13.out  test14.in  test14.out  test2.in  test2.out  test3.out  test4.out  test5.in  test5.out  test6.out  test7.out  test8.out  test9.out  test_test.cpp
tests/data/binary/: test1.out  test10.out  test11.out  test12.out  test13.out  test14.out  test15.out  test16.out  test17.in  test17.out  test18.in  test18.out  test2.out  test3.out  test4.out  test5.out  test6.in  test6.out  test7.out  test8.out  test9.in  test9.out  test_test.cpp
tests/data/binary-bitwise/: test1.out  test2.in  test2.out  test3.out  test_test.cpp
tests/data/binary-logical/: test1.out  test2.out  test3.out  test4.out  test5.out  test6.out  test_test.cpp
tests/data/bitwise-shift/: test1.out  test2.out  test3.out  test_test.cpp
tests/data/complex/: test1.out  test2.out  test_test.cpp
tests/data/conditional/: test1.out  test2.out  test3.out  test_test.cpp
tests/data/equality/: test1.in  test1.out  test2.out  test3.out  test4.out  test_test.cpp
tests/data/grouping/: test1.out  test2.out  test_test.cpp
tests/data/left-hand-side/: test1.in  test1.out  test10.out  test11.out  test12.out  test13.out  test14.out  test3.out  test4.out  test5.out  test6.out  test7.out  test8.out  test9.out  test_test.cpp
tests/data/multiplicative/: test1.out  test2.out  test3.out  test_test.cpp
tests/data/numeric-literal/: test1.out  test2.out  test3.out  test4.out  test5.out  test6.out  test7.out  test8.out  test_test.cpp
tests/data/object/: test1.out  test10.out  test11.out  test12.out  test13.out  test14.out  test15.out  test16.out  test17.out  test18.out  test19.out  test2.out  test20.out  test21.out  test22.out  test23.out  test24.out  test3.out  test4.out  test5.out  test6.out  test7.out  test8.out  test9.out  test_test.cpp
tests/data/other/: test1.out  test2.out  test3.out  test_test.cpp
tests/data/postfix/: test1.out  test2.in  test2.out  test3.out  test4.in  test4.out  test5.out  test6.in  test6.out  test_test.cpp
tests/data/relational/: test1.out  test2.out  test3.out  test4.out  test5.out  test6.out  test7.out  test_test.cpp
tests/data/statement/: test1.out  test10.out  test11.out  test12.out  test13.out  test14.in  test14.out  test15.out  test16.in  test16.out  test17.out  test18.out  test19.out  test2.out  test20.out  test21.out  test22.out  test23.out  test24.out  test25.out  test26.in  test26.out  test27.in  test27.out  test28.out  test3.out  test30.in  test31.out  test34.in  test35.out  test36.in  test38.out  test39.out  test4.out  test5.out  test6.out  test7.in  test7.out  test8.in  test8.out  (+2 more)
tests/data/tokenize/: test1.in  test1.out  test10.out  test11.out  test2.out  test3.out  test4.out  test5.out  test6.out  test7.in  test7.out  test8.out  test9.out  test_test.cpp
tests/data/unary/: test1.out  test10.out  test11.out  test12.out  test13.out  test2.out  test3.out  test4.out  test5.out  test6.out  test7.out  test8.out  test9.out  test_test.cpp
